# StackOverMemes

./: .gitignore  CMakeLists.txt  README.md  build_win.bat
doc/features/: structure.docx
modules/core/: main.cpp
modules/logmanager/: CMakeLists.txt  logmanager.cpp  logmanager.h
modules/memevisor/: CMakeLists.txt  memevisor.cpp  memevisor.h
modules/sqlmanager/: CMakeLists.txt  sqlmanager.cpp
modules/vkmanager/: CMakeLists.txt  vkmanager.cpp  vkmanager.h
